# bamboo

./: .gitattributes  README.md  package-lock.json  package.json  tsconfig.json
src/: CopyMachine.ts  cpp.ts  cs.ts  main.ts  obsidian.ts
template/c#/: .editorconfig
template/cpp/: CMakeLists.txt  CMakePresets.json  LICENSE
template/obsidian/: .vault-nickname
template/obsidian/.obsidian/: app.json  community-plugins.json  daily-notes.json  hotkeys.json  workspace.json
template/obsidian/.obsidian/plugins/obsidian-git/: data.json
template/obsidian/.obsidian/plugins/obsidian-languagetool-plugin/: data.json
template/obsidian/.obsidian/plugins/templater-obsidian/: data.json
template/obsidian/Templates/: DefaultProperties.md
