cmake_minimum_required(VERSION 3.15)
project({{PROJECT_NAME}} VERSION 1.1.0)

add_library(CPP23 INTERFACE)
target_compile_features(CPP23 INTERFACE cxx_std_23)

add_executable({{PROJECT_NAME}}
	"${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp"
)
target_include_directories({{PROJECT_NAME}} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries({{PROJECT_NAME}} PUBLIC CPP23)

install(TARGETS {{PROJECT_NAME}} DESTINATION bin)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include DESTINATION .)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE DESTINATION .)

include(InstallRequiredSystemLibraries)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_VERSION_MAJOR "${{{PROJECT_NAME}}_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${{{PROJECT_NAME}}_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${{{PROJECT_NAME}}_VERSION_PATCH}")
set(CPACK_SOURCE_IGNORE_FILES "/.vscode/;/build/;/dist/;${CPACK_SOURCE_IGNORE_FILES}")
set(CPACK_PACKAGE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/dist")
set(CPACK_SOURCE_GENERATOR "ZIP")
set(CPACK_GENERATOR "ZIP")

include(CPack)